prevent word-break on clipboard history detail type

--- a/src/app/features/clipboard/clipboard-history/clipboard-history.component.scss
+++ b/src/app/features/clipboard/clipboard-history/clipboard-history.component.scss
@@ -44,9 +44,13 @@
 
                 .details {
                     display: flex;
-                    align-items: center;
+                    align-items: start;
                     gap: 10px;
                     color: $text-gray;
+
+                    .type {
+                        word-break: normal;
+                    }
                 }
             }
 
